# espidf-components

./: .gitignore  LICENSE
audio/: Alarm.mp3.h  AudioPlayer.hh  CMakeLists.txt  codec_manager.hh  codec_manager_internal_dac.hh
smopla/: CMakeLists.txt  Kconfig.projbuild  devicemanager.cc  http_handlers.cc
smopla/include/: HAL.hh  HAL_labathomeV10.hh  HAL_ptnchenV2.hh  functionblocks.hh
webmanager/: .gitignore  CMakeLists.txt  webmanager.cc
webmanager/builder/: certificates.ts  esp32.ts  gulpfile.ts  hostname.txt  package-lock.json  package.json
webmanager/flatbuffers/: app.fbs  systeminfo.fbs  timeseries.fbs  usersettings.fbs  wifi.fbs
webmanager/include/: extra_partition_subtypes.inc  timeseries.hh  webmanager.hh
webmanager/testserver/: index.ts  package-lock.json  package.json  timeseries_generator.ts  tsconfig.json
webmanager/usersettings/: usersettings_base.ts
webmanager/webui_builder/: gulpfile.ts  package-lock.json  package.json
webmanager/webui_htmlscss/: app.html  app.scss  dialog.scss  usersettings.scss  webmanager.html
webmanager/webui_logic/: app.ts  app_management.ts  constants.ts  dialog_controller.ts  esp32.ts  package-lock.json  package.json  screen_controller.ts  systemscreencontroller.ts  timeseries_controller.ts  tsconfig.json  usersettings_base.ts  usersettings_controller.ts  usersettings_copied_during_build.ts  utils.ts  wifimanager_controller.ts
webmanager/webui_logic/src/: app.ts  app_management.ts  constants.ts  dialog_controller.ts  screen_controller.ts  (+3 more)
webmanager/webui_typescript/: package-lock.json  tsconfig.json
(+239 files in other folders)
