idf_component_register(
                       INCLUDE_DIRS "."
                       EMBED_FILES "./speech_de/alarm_co2.mp3" "./speech_de/alarm_temperature.mp3" "./speech_de/nok.mp3" "./speech_de/ok.mp3" "./speech_de/ready.mp3" "./music/fanfare.mp3" "./music/negative.mp3" "./music/positive.mp3" "./music/siren.mp3"
                       REQUIRES "common"
                       )

